name:                cs421-kit
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cs421-kit#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Huber
maintainer:          example@example.com
copyright:           2017 Eric Huber
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable cs421-kit-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cs421-kit
  default-language:    Haskell2010
  extra-lib-dirs: .

test-suite cs421-kit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cs421-kit
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  extra-lib-dirs: .

source-repository head
  type:     git
  location: https://github.com/githubuser/cs421-kit
